# google-chat-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: gchat.rb
docs/: DEVELOPER.md  HOWTO.md  TODO.md
docs/specs/001-gchat-rust-cli/: spec.md
packaging/homebrew/: gchat.rb.template
src/: auth.rs  cli.rs  commands.rs  config.rs  error.rs  google.rs  main.rs  output.rs
