[package]
name = "gchat"
version = "1.1.1"
edition = "2024"
description = "Script-first Google Chat CLI"
license = "MIT"
repository = "https://github.com/kamil-rudnicki/google-chat-cli"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
url = "2"
webbrowser = "1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = "2"
